k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaip-website
  namespace: barleycorn
  labels:
    app: aaip-website
spec:
  replicas: 2
  selector:
    matchLabels:
      app: aaip-website
  template:
    metadata:
      labels:
        app: aaip-website
    spec:
      imagePullSecrets:
        - name: ptreg
      containers:
        - name: aaip-website
          image: registry2.palmtech.com.au/bc-aaip:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              memory: 256Mi
          livenessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aaip
  namespace: barleycorn
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
  - host: aaip.electricsheep.au
    http:
      paths:
      - backend:
          service:
            name: aaip-website
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: www.aaip.electricsheep.au
    http:
      paths:
      - backend:
          service:
            name: aaip-website
            port:
              number: 80
        path: /
        pathType: Prefix
---
apiVersion: v1
kind: Service
metadata:
  name: aaip-website
  namespace: barleycorn
  labels:
    app: aaip-website
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  selector:
    app: aaip-website
